# auctionVision

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.txt  alembic.ini  pyproject.toml  spec.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: 51ece4048200_add_historical_hammers_table.py  a1b2c3d4e5f6_add_bid_count_hammer_price_sold_at.py  c70be7ba83cb_add_bid_count_to_historical_hammers.py  d4f8a2e91b03_add_finn_market_data_table.py  dfbe300bcf75_initial_schema_all_core_tables.py  e5a9f1b2c3d4_add_finn_forsale_listings_table.py  f1a2b3c4d5e6_add_visual_triage_columns.py
backend/: __init__.py  comparables.py  config.py  database.py  hammer_predictor.py  importer.py  models.py  normalizer.py  prefilter.py  scheduler.py  schemas.py  scoring.py
backend/api/: main.py  routes_jobs.py  routes_lots.py  routes_views.py
config/: categories.yaml  designers.yaml  finn_wanted.yaml  historical.yaml  materials.yaml  norway_costs.yaml  resale_costs.yaml  scoring.yaml  sources.yaml
frontend/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+5 more)
scripts/: backfill.py  build_ng_data.py  build_research_prompts.py  collect_enrichments.py  collect_research.py  daily_report.py  extract_text.py  fetch_blomqvist.py  fetch_historical.py  import_comparables.py  import_enrichments.py  import_retail_ng.py  run_arbitrage.py  run_enrich.py  run_fetch.py  run_fetch_forsale.py  run_fetch_wanted.py  run_historical_scrape.py  run_parse.py  run_pipeline.py  test_pipeline.py  visual_triage.py
(+37 files in other folders)
